--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@f/store": "^1.0.1"
   },
   "devDependencies": {
+    "@koax/promise": "^1.0.0",
     "babel-cli": "^6.4.0",
     "babel-polyfill": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
-    "koax": "^0.3.1",
+    "koax": "^0.4.2",
     "tape": "^4.2.2"
   }
 }
