--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@f/identity": "^1.1.1",
-    "@f/store": "^1.0.1"
+    "@f/store": "^1.0.1",
+    "@koax/driver": "^0.2.1"
   },
   "devDependencies": {
-    "@koax/promise": "^1.0.0",
     "babel-cli": "^6.4.0",
     "babel-polyfill": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
-    "koax": "^0.4.2",
+    "koax": "^0.6.3",
     "tape": "^4.2.2"
   }
 }
